@@ -1,5 +1,6 @@
 Adminer-4.17.2-dev:
 SQLite: Add command Check tables
+SQLite: Display all rows of variable values
 MongoDB: Remove support for deprecated extension mongo
 
 Adminer-4.17.1 (released 2025-02-25):
